Updated Capstone Project

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tek-bdd-Project</name>
+	<name>Mirwais-Capstone-Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
